# gdphysics

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.json  example_config.json
src/: config.rs  levelstring.rs  main.rs  object.rs  physics.rs  speed.rs
