[package]
name = "gdphysics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libflate = "1.2.0"
quick-xml = "0.23.0"
block-modes = "0.9.1"
aes = "0.8.1"
crc32fast = "1.3.2"
base64 = "0.13.0"
strum = "0.24.0"
strum_macros = "0.24.0"
rapier2d = "0.13.0"
serde_json = "1.0.81"
serde = "1.0.137"
serde_derive = "1.0.137"
